# axora

./: .editorconfig  .gitignore  AGENTS.md  ALIGNMENT_AND_REMEDIATION_REPORT.md  BATTERIES_INCLUDED_ANALYSIS.md  CLEAN_SLATE_PROVIDER_IMPLEMENTATION.md  CODEBASE_PURGE_EXECUTION_PLAN.md  COMO_RODAR.md  CONTRIBUTING.md  Cargo.toml  DEEP_AUDIT_AND_DOCUMENTATION_OVERHAUL.md  DOCS-INDEX.md  IMPLEMENTATION_PLAN.md  README.md  RETRIEVAL_PHASE2_IMPLEMENTATION.md  SABOTAGE_AUDIT_AND_REMEDIATION.md  STATE_OF_THE_UNION_AND_REGISTRY_PLAN.md  TASK_QUEUE_FORENSIC_AUDIT.md  TASK_QUEUE_RESTORATION_PLAN.md  TESTING-AND-CONFIG.md  axora.example.toml  buf.gen.yaml  clippy.toml  deny.toml  openakta.db  openakta.example.toml  openakta.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-cli.sh  run-daemon.sh  rust-toolchain.toml  rustfmt.toml  turbo.json
.cargo/: config.toml
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: api-overhead.rs  proto-conversion.rs  regression-tests.rs  support.rs
benchmarks/retrieval/: portfolio.v1.json
crates/axora-agents/: Cargo.toml
crates/axora-agents/src/: aci_formatter.rs  agent.rs  capabilities.rs  communication.rs  conflict.rs  coordinator.rs  decomposer.rs  error.rs  executor.rs  graph.rs  heartbeat.rs  lib.rs  mcp_client.rs  memory.rs  merger.rs  monitor.rs  patch_protocol.rs  prompt_assembly.rs  provider.rs  provider_transport.rs  react.rs  result_contract.rs  retrieval.rs  state_machine.rs  task.rs  task_queue.rs  transport.rs  worker_pool.rs
crates/axora-agents/tests/: coordinator_v2.rs  integration.rs  task_queue_integration.rs  worker_pool_integration.rs
crates/axora-cache/: Cargo.toml  README.md
crates/axora-cache/benches/: performance.rs  token_savings.rs
crates/axora-cache/docs/: CONTEXT.md  MINIFIER.md  TOON.md
crates/axora-cache/src/: blackboard.rs  concurrency.rs  context.rs  context_pruning.rs  diff.rs  latent_context.rs  lib.rs  minifier.rs  prefix_cache.rs  rag.rs  toon.rs
crates/axora-cache/tests/: blackboard_v2.rs  context_compactor.rs  integration.rs  token_savings_validation.rs
crates/axora-cli/: Cargo.toml
crates/axora-cli/src/: main.rs
crates/axora-core/: Cargo.toml
crates/axora-core/benches/: frame_bench.rs
crates/axora-core/src/: bootstrap.rs  config.rs  frame.rs  lib.rs  runtime_services.rs  server.rs
crates/axora-core/tests/: integration.rs
crates/axora-daemon/: Cargo.toml
crates/axora-daemon/src/: main.rs
crates/axora-docs/: Cargo.toml
crates/axora-docs/src/: adr.rs  index.rs  lib.rs  living.rs  reconciler.rs  schema.rs
crates/axora-embeddings/: Cargo.toml
crates/axora-embeddings/benches/: embed_bench.rs
crates/axora-embeddings/src/: config.rs  embedder.rs  error.rs  lib.rs
crates/axora-mcp-server/: Cargo.toml
crates/axora-mcp-server/src/: lib.rs
crates/axora-memory/: Cargo.toml
crates/axora-memory/src/: consolidation.rs  episodic_store.rs  lib.rs  lifecycle.rs  memgas_retriever.rs  procedural_store.rs  semantic_store.rs  skill_seeder.rs
crates/axora-proto/: Cargo.toml  build.rs
crates/axora-proto/src/: lib.rs
crates/axora-rag/: Cargo.toml
crates/axora-rag/src/: code_pipeline.rs  context.rs  final_stage.rs  lib.rs  reranker.rs  retriever.rs
crates/openakta-agents/: Cargo.toml
crates/openakta-agents/src/: aci_formatter.rs  agent.rs  assignment_contract.rs  blackboard_runtime.rs  capabilities.rs  communication.rs  conflict.rs  decomposer.rs  diagnostics.rs  error.rs  execution_trace.rs  executor.rs  graph.rs  heartbeat.rs  hitl.rs  intake.rs  lib.rs  mcp_client.rs  monitor.rs  patch_protocol.rs  prompt_assembly.rs  provider.rs  provider_registry.rs  provider_transport.rs  react.rs  result_contract.rs  retrieval.rs  state_machine.rs  task_queue.rs  token_budget.rs  tool_registry.rs  transport.rs  wire_profile.rs  worker_pool.rs
crates/openakta-agents/tests/: api_client_integration.rs  api_client_mocked_integration.rs  chaos_tests.rs  coordinator_v2.rs  integration.rs  mock_server.rs  proto_conversion.rs  react_mcp_mission_id.rs  sim_api_client.rs  sim_api_client_mocked.rs  sim_chaos_tests.rs  sim_mock_server.rs  sim_proto_conversion.rs  task_queue_integration.rs  worker_pool_integration.rs
crates/openakta-api-client/: Cargo.toml
crates/openakta-api-client/src/: auth.rs  capability.rs  client.rs  config.rs  error.rs  execution_strategy.rs  feature_flags.rs  lib.rs  mol_flags.rs  work_management.rs  work_proto_convert.rs
crates/openakta-api-client/tests/: api_client_test.rs
crates/openakta-cli/: Cargo.toml
crates/openakta-cli/src/: ask.rs  main.rs
crates/openakta-core/: Cargo.toml
crates/openakta-core/benches/: frame_bench.rs
crates/openakta-core/src/: bootstrap.rs  config.rs  config_resolve.rs  control_plane.rs  lib.rs  runtime_services.rs  runtime_services.rs.bak  server.rs
crates/openakta-core/tests/: integration.rs
crates/openakta-daemon/: Cargo.toml  README.md
crates/openakta-daemon/src/: main.rs
crates/openakta-docs/: Cargo.toml  README.md
crates/openakta-docs/src/: adr.rs  ast.rs  changelog.rs  confidence.rs  drift.rs  index.rs  lib.rs  linter.rs  living.rs  reconciler.rs  schema.rs
crates/openakta-embeddings/: Cargo.toml
crates/openakta-embeddings/src/: config.rs  embedder.rs  error.rs  lib.rs  registry.rs  research_provider.rs  runtime_registry.rs
crates/openakta-evaluator/: Cargo.toml
crates/openakta-evaluator/src/: engine.rs  lib.rs  pipeline.rs  retrieval.rs  tests.rs  types.rs  validation.rs
crates/openakta-indexing/: Cargo.toml
crates/openakta-indexing/src/: chunker.rs  code_index.rs  indexer.rs  influence.rs  lib.rs  merkle.rs  repository_map.rs  scip.rs  skill_index.rs  task_queue.rs  traceability.rs  vector_store.rs
crates/openakta-mcp-server/: Cargo.toml
crates/openakta-mcp-server/src/: execution.rs  lib.rs  mass_refactor.rs
crates/openakta-mcp-wasi-tools/: Cargo.toml
crates/openakta-memory/: Cargo.toml
crates/openakta-proto/: Cargo.toml  build.rs
crates/openakta-rag/: Cargo.toml
crates/openakta-research/: Cargo.toml
crates/openakta-storage/: Cargo.toml
crates/openakta-workflow/: Cargo.toml
(+936 files in other folders)
