[workspace]
resolver = "2"
members = [
    "crates/openakta-cli",
    "crates/openakta-proto",
    "crates/openakta-workflow",
    "crates/openakta-storage",
    "crates/openakta-core",
    "crates/openakta-daemon",
    "crates/openakta-mcp-server",
    "crates/openakta-mcp-wasi-tools",
    # Phase 1 crates
    "crates/openakta-rag",
    "crates/openakta-indexing",
    "crates/openakta-embeddings",
    "crates/openakta-agents",
    "crates/openakta-cache",
    "crates/openakta-api-client",
    # Phase 2 crates
    "crates/openakta-docs",
    "crates/openakta-memory",
    "crates/openakta-research",
    "crates/openakta-evaluator",
    # Benchmarks
    "benchmarks",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OPENAKTA Team <team@openakta.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/openakta/aktacode"
# MSRV: keep in sync with `rust-toolchain.toml` (pinned toolchain for the workspace).
rust-version = "1.94"

# Shared lint levels for workspace members (`[lints] workspace = true` in each crate).
# `missing_docs` stays at default (allow): several crates are still growing public surfaces;
# re-enable workspace-wide when API docs are complete (see docs/RUST_TOOLING_BASELINE.md).
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

# Smaller release artifacts for CLI/daemon without aggressive compile-time tuning.
[profile.release]
strip = "debuginfo"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Protocol Buffers
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"
prost-types = "0.12"
async-nats = "0.37"

# Database
rusqlite = { version = "0.32.1", features = ["bundled", "chrono", "uuid", "serde_json", "load_extension"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0.86"
secrecy = "0.8"

# Logging & Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.22", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
parking_lot = "0.12"
once_cell = "1.21"
humantime = "2.1"
humantime-serde = "1.1"

# Testing
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.27"

# Internal crates
openakta-proto = { path = "crates/openakta-proto" }
openakta-workflow = { path = "crates/openakta-workflow" }
openakta-storage = { path = "crates/openakta-storage" }
openakta-core = { path = "crates/openakta-core" }
openakta-mcp-server = { path = "crates/openakta-mcp-server" }
openakta-indexing = { path = "crates/openakta-indexing" }
openakta-docs = { path = "crates/openakta-docs" }
openakta-cache = { path = "crates/openakta-cache" }
openakta-agents = { path = "crates/openakta-agents" }
openakta-memory = { path = "crates/openakta-memory" }
openakta-research = { path = "crates/openakta-research" }
openakta-evaluator = { path = "crates/openakta-evaluator" }
openakta-api-client = { path = "crates/openakta-api-client" }
regex = "1.12"
openakta-embeddings = { path = "crates/openakta-embeddings" }
openakta-mcp-wasi-tools = { path = "crates/openakta-mcp-wasi-tools" }

# Phase 1: Embeddings & ML
candle-core = "0.9"
candle-transformers = "0.8"
candle-nn = "0.8"

# Phase 1: Vector search
qdrant-client = { version = "1.17", default-features = false, features = ["serde"] }
# lancedb = "0.10"  # Temporarily disabled due to arrow-arith conflict

# Phase 1: Code parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"

# Phase 1: Full-text search
tantivy = "0.22"

# Phase 1: Caching
rocksdb = "0.22"

# Phase 1: File watching
notify = "6.1"

# Phase 1: Hashing
blake3 = "1.8"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Phase 1: Inference
ollama-rs = "0.2"

# Phase 1: Diff generation
unified-diff = "0.3"
patch = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
async-trait = "0.1"
# Pinned to 24.0.6+ (<25): wasmtime 25.x has no patched release for several RustSec advisories.
wasmtime = "24.0.6"
wasmtime-wasi = "24.0.6"
wat = "1.245"

# Phase 1: Token counting
tiktoken-rs = "0.6"

# Hugging Face tokenizers (MiniLM / BERT-style models)
tokenizers = "0.19"

# Phase 2: OpenAI-family transport
async-openai = "0.28.0"
futures = "0.3"
