[package]
name = "axora-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Multi-tier caching for AXORA"

[dependencies]
# Caching
dashmap.workspace = true
rocksdb.workspace = true
qdrant-client.workspace = true

# Async
tokio.workspace = true
futures = "0.3"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Hashing
sha2.workspace = true
md5 = "0.7"
blake3.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
tracing.workspace = true
uuid.workspace = true
walkdir = "2.4"
regex = "1.10"

# Internal
axora-indexing = { path = "../axora-indexing" }

[dev-dependencies]
tokio-test.workspace = true
criterion.workspace = true
tempfile = "3.10"
axora-docs.workspace = true
axora-proto.workspace = true

[[bench]]
name = "token_savings"
harness = false

# [[bench]]
# name = "performance"
# harness = false
