[package]
name = "axora-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Batteries-included AXORA CLI"

[[bin]]
name = "axora"
path = "src/main.rs"

[dependencies]
axora-agents.workspace = true
axora-core.workspace = true
anyhow.workspace = true
clap = { version = "4.4", features = ["derive", "env"] }
serde_json.workspace = true
tokio.workspace = true
