[package]
name = "axora-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AXORA daemon executable"

[[bin]]
name = "axora-daemon"
path = "src/main.rs"

[dependencies]
axora-proto.workspace = true
axora-storage.workspace = true
axora-core.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

clap = { version = "4.4", features = ["derive", "env"] }
