[package]
name = "axora-docs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Agent-native documentation management system for AXORA"

[dependencies]
# Indexing support
axora-indexing.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
tokio.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true

# Hashing
blake3.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile = "3.10"
