[package]
name = "axora-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP gRPC tool sandbox server for AXORA"

[dependencies]
axora-proto.workspace = true
axora-cache.workspace = true
axora-docs.workspace = true
axora-embeddings.workspace = true
axora-indexing.workspace = true
axora-memory.workspace = true
axora-rag = { path = "../axora-rag" }
tokio.workspace = true
tonic.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio-stream.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile = "3.10"
