[package]
name = "axora-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Protocol Buffer definitions and generated code for AXORA"

[dependencies]
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true

[build-dependencies]
tonic-build.workspace = true
