[package]
name = "axora-rag"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "RAG pipeline for AXORA with hybrid retrieval"

[dependencies]
# Internal
axora-indexing = { path = "../axora-indexing" }
axora-embeddings = { path = "../axora-embeddings" }

# Full-text search
tantivy = "0.22"

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
criterion.workspace = true
tempfile = "3.10"
