[package]
name = "openakta-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OPENAKTA daemon executable"

[lints]
workspace = true

[[bin]]
name = "openakta-daemon"
path = "src/main.rs"

[dependencies]
openakta-proto.workspace = true
openakta-workflow.workspace = true
openakta-storage.workspace = true
openakta-core.workspace = true
openakta-docs.workspace = true
openakta-indexing.workspace = true
openakta-mcp-server.workspace = true
openakta-memory.workspace = true
openakta-agents = { path = "../openakta-agents" }
openakta-api-client.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
tonic.workspace = true

rusqlite.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
blake3.workspace = true
sha2.workspace = true
chrono.workspace = true

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

clap = { version = "4.6", features = ["derive", "env"] }
sysinfo = "0.33"

[dev-dependencies]
tempfile = "3"
