[package]
name = "openakta-docs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Agent-native documentation management system for OPENAKTA"

[lints]
workspace = true

[dependencies]
# Indexing support
openakta-indexing.workspace = true
openakta-evaluator.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"

# Async
tokio.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
regex = "1.12"
pulldown-cmark = "0.13"
tree-sitter.workspace = true
tree-sitter-typescript.workspace = true

# Hashing
blake3.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile = "3.27"
