[package]
name = "openakta-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP gRPC tool sandbox server for OPENAKTA"

[lints]
workspace = true

[dependencies]
openakta-agents = { path = "../openakta-agents" }
openakta-proto.workspace = true
openakta-cache.workspace = true
openakta-docs.workspace = true
openakta-embeddings.workspace = true
openakta-indexing.workspace = true
openakta-memory.workspace = true
openakta-mcp-wasi-tools.workspace = true
openakta-rag = { path = "../openakta-rag" }
tokio.workspace = true
tonic.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio-stream.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wat.workspace = true
uuid.workspace = true
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.27"
