[package]
name = "openakta-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SQLite storage layer for OPENAKTA"

[lints]
workspace = true

[dependencies]
openakta-proto.workspace = true
prost-types.workspace = true

rusqlite.workspace = true
refinery.workspace = true

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
