[package]
name = "openakta-workflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Local workflow policy and domain helpers for OPENAKTA"

[lints]
workspace = true

[dependencies]
openakta-api-client.workspace = true

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
